--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@mdnm/react-hashtag": "^3.0.2",
+    "@mui/material": "^5.8.4",
     "axios": "^0.27.2",
     "react": "^17.0.2",
     "react-debounce-input": "^3.3.0",
@@ -12,6 +15,7 @@
     "react-loader-spinner": "^5.1.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^4.0.3",
+    "react-tooltip": "^4.2.21",
     "styled-components": "^5.3.5",
     "url-metadata": "^2.5.0"
   },
