--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
     "react-loader-spinner": "^5.1.5",
+    "react-modal": "^3.15.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^4.0.3",
     "react-tooltip": "^4.2.21",
