--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@emotion/styled": "^11.9.3",
     "@mdnm/react-hashtag": "^3.0.2",
     "@mui/material": "^5.8.4",
+    "@use-it/interval": "^1.0.0",
     "axios": "^0.27.2",
     "react": "^17.0.2",
     "react-debounce-input": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
+    "react-infinite-scroller": "^1.2.6",
     "react-loader-spinner": "^5.1.5",
     "react-modal": "^3.15.1",
     "react-router-dom": "^6.3.0",
@@ -19,7 +21,8 @@
     "react-tooltip": "^4.2.21",
     "styled-components": "^5.3.5",
     "sweetalert2": "^11.4.18",
-    "url-metadata": "^2.5.0"
+    "url-metadata": "^2.5.0",
+    "use-interval": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
